assets/review-slider.css
.review-slider__titles {
  margin-bottom: 3rem;

  h2 {
    margin: initial;
    font-size: 3.2rem;
    line-height: 133%;
    font-weight: 500;
  }
}

.review-slider__top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1.5rem;
}

.review-slider__top-number {
  font-size: 2.4rem;
  color: rgba(0, 0, 0, 0.5);
  font-weight: 500;
}

.review-slider__top-text {
  p {
    margin: initial;
    font-size: 1.4rem;
    line-height: 133%;
    color: #000;
  }

  span {
    font-size: 1.4rem;
    line-height: 133%;
    color: rgba(0, 0, 0, 0.5);
  }
}

.review-slider__product-name {
  p {
    margin: initial;
    font-size: 1.4rem;
    line-height: 114%;
    color: #000;
  }
}

.review-slider__product-text {
  border-radius: 1rem;
  background-color: #ebebeb;
  padding: 0.8rem;

  p {
    margin: initial;
    font-size: 1.4rem;
    color: #000;
    line-height: 120%;
  }
}

.review-slider {
  margin-top: 8rem;
}


.review-slider__slide {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  border: 0.2rem solid #000;
  border-radius: 2rem;
  padding-top: 3rem;
  padding-bottom: 3rem;
  padding-left: 2rem;
  padding-right: 2rem;
}

.review-slider__container {
  background-color: #F7F7F7;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.review-slider__wrapper {
  width: calc(100% + 3rem);
  margin-left: -1.5rem;
}

.review-slider__product {
  display: flex;
  gap: 1rem;
  border-radius: 1rem;
  padding: 0.6rem;
  background-color: #ebebeb;
}

.review-slider__product-img {
  max-width: 3.5rem;
  height: 3.5rem;

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

@media screen and (min-width: 575px) {
  .review-slider__wrapper {
    width: initial;
    margin-left: initial;
    margin: 0 auto;
  }
}

@media screen and (min-width: 1024px) {

  .review-slider {
    margin-top: 20rem;
  }

  .review-slider__wrapper {
    .swiper-slide {
      transition: padding-top 0.3s linear;
    }

   .swiper-slide-active {
    padding-top: 5rem;
   }

   .swiper-slide-next {
    padding-top: 10rem;
   }
  }

  .review-slider__titles {
    margin-bottom: 5rem;
   

    h2 {
      font-size: 6.4rem;
      max-width: 85rem;
    }
  }

  .review-slider__container {
    padding-top: 5rem;
    padding-bottom: 5rem;
  }

  .review-slider__top-text {
    p {
      font-size: 2.2rem;
    }

    span {
      font-size: 1.8rem;
    }
  }

  .review-slider__product-name {
    p {
      font-size: 1.8rem;
    }
  }

  .review-slider__product-img {
    max-width: 10rem;
    height: initial;
  }

  .review-slider__product {
    gap: 2rem;
    padding: 1.2rem;
  }

  .review-slider__product-text {
    padding: 1.2rem;

    p {
      font-size: 1.6rem;
      line-height: 133%;
    }
  }
}

